--- a/src/components/styles/BadgesList.css
+++ b/src/components/styles/BadgesList.css
@@ -8,12 +8,25 @@
   border-radius: 5px;
   display: flex;
   padding: 1rem;
+  align-items: center;;
+}
+
+.BadgesListItem p {
+  margin-bottom: 0;
+}
+
+.BadgesListItem p:last-child {
+  color: #00acee;
+}
+
+.BadgesListItem p:first-child {
+  font-weight: bold;
 }
 
 .BadgesListItem__avatar {
   border-radius: 50%;
   background: #a3a3a3;
   margin-right: 0.5rem;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
 }
