--- a/src/components/styles/BadgesList.css
+++ b/src/components/styles/BadgesList.css
@@ -8,7 +8,8 @@
   border-radius: 5px;
   display: flex;
   padding: 1rem;
-  align-items: center;;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
 .BadgesListItem p {
